add install target to makefile

--- a/thermometer/Makefile
+++ b/thermometer/Makefile
@@ -2,8 +2,17 @@
 
 C := gcc
 FLAGS := -Wall
+OS := $(shell uname)
 
-all: clean test bin/Thermometer
+INSTALL := @echo "Unable to determine your OS, you need to install check for testing"
+ifeq ($(OS) , Linux)
+	INSTALL := sudo apt-get install check
+endif
+ifeq ($(OS),Darwin)
+	INSTALL := brew install check
+endif
+
+all: install clean test bin/Thermometer
 
 test: bin/conversions.spec
 	./bin/conversions.spec
@@ -19,6 +28,10 @@ bin/conversions.spec.o: src/conversions.spec.c
 
 bin/conversions.spec: bin bin/conversions.o bin/conversions.spec.o
 	$(C) $(FLAGS) bin/conversions.spec.o bin/conversions.o -o bin/conversions.spec -lcheck -lm -lpthread
+
+install:
+	@echo "Running on $(OS)"
+	$(INSTALL)
 
 bin:
 	mkdir bin
