Update project dockerfile to use base image with check installed and add docker-compose

--- a/thermometer/Dockerfile
+++ b/thermometer/Dockerfile
@@ -1,11 +1,19 @@
-FROM gcc:4.9
+FROM ccolin84/raspbian-check
 
 COPY . /usr/src/myapp
 
 WORKDIR /usr/src/myapp
 
-RUN ./setup.sh
+RUN apt-get update -y && apt-get upgrade -y
+
+RUN apt-get install curl build-essential -y
+
+RUN apt-get install wiringpi
+
+RUN env
 
 RUN make
+
+RUN whoami
 
 CMD ["./bin/Thermometer"]
