remove apt upgrade from dockerfile

--- a/thermometer/Dockerfile
+++ b/thermometer/Dockerfile
@@ -4,7 +4,7 @@ COPY . /usr/src/myapp
 
 WORKDIR /usr/src/myapp
 
-RUN apt-get update -y && apt-get upgrade -y
+RUN apt-get update -y
 
 RUN apt-get install curl build-essential -y
 
