refactor temperature to new module

--- a/thermometer/Makefile
+++ b/thermometer/Makefile
@@ -14,20 +14,30 @@ endif
 
 all: install clean test bin/Thermometer
 
-test: bin/conversions.tests
+test: bin/conversions.tests bin/temperature.tests
 	./bin/conversions.tests
+	./bin/temperature.tests
 
-bin/Thermometer: bin bin/conversions.o
-	$(C) $(FLAGS) src/Thermometer.c bin/conversions.o -o bin/Thermometer -lwiringPi -lm
+bin/Thermometer: bin bin/conversions.o bin/temperature.o
+	$(C) $(FLAGS) src/Thermometer.c bin/conversions.o bin/temperature.o -o bin/Thermometer -lwiringPi -lm
 
 bin/conversions.o: bin src/conversions.c
 	$(C) $(FLAGS) src/conversions.c -c -o bin/conversions.o
 
-bin/conversions.tests.o: src/conversions.tests.c
+bin/conversions.tests.o: bin src/conversions.tests.c
 	$(C) $(FLAGS) src/conversions.tests.c -c -o bin/conversions.tests.o
 
 bin/conversions.tests: bin bin/conversions.o bin/conversions.tests.o
 	$(C) $(FLAGS) bin/conversions.tests.o bin/conversions.o -o bin/conversions.tests -lcheck -lm -lpthread
+
+bin/temperature.o: bin src/temperature.c
+	$(C) $(FLAGS) src/temperature.c -c -o bin/temperature.o
+
+bin/temperature.tests.o: bin src/temperature.tests.c
+	$(C) $(FLAGS) src/temperature.tests.c -c -o bin/temperature.tests.o
+
+bin/temperature.tests: bin bin/temperature.o bin/conversions.o bin/temperature.tests.o
+	$(C) $(FLAGS) bin/temperature.tests.o bin/temperature.o bin/conversions.o -o bin/temperature.tests -lcheck -lm -lpthread
 
 install:
 	@echo "Running on $(OS)"
