--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,16 @@
-version: "3"
+version: "3.7"
+
 services:
   thermometer:
     build: ./thermometer
     network_mode: host
     privileged: true
+    depends_on:
+      - rabbitmq
+
+  rabbitmq:
+    image: rabbitmq:3.7.17-management
+    ports:
+      - "15672:15672"
+      - "5672:5672"
 
