add restart on failure to thermometer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: ./thermometer
     network_mode: host
     privileged: true
+    restart: on-failure
     depends_on:
       - rabbitmq
 
